k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rnic-frontend-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: "rnicancer.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rnic-frontend-service
                port:
                  number: 80
